--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@ctrl/tinycolor": "^4.1.0",
 		"@notionhq/client": "^2.2.15",
 		"dayjs": "^1.11.12",
+		"pocketbase": "^0.21.4",
 		"svelte-i18n": "^4.0.0"
 	}
 }
