--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
 		"@ctrl/tinycolor": "^4.1.0",
 		"@notionhq/client": "^2.2.15",
 		"@radulucut/relative": "^2.0.5",
+		"argon2": "^0.41.1",
 		"dayjs": "^1.11.13",
 		"i18next": "^23.14.0",
 		"i18next-browser-languagedetector": "^8.0.0",
 		"i18next-http-backend": "^2.6.1",
 		"pocketbase": "^0.21.4",
+		"short-unique-id": "^5.2.0",
 		"svelte-i18n": "^4.0.0",
 		"svelte-i18next": "^2.2.2",
 		"yaml": "^2.5.0"
